...
            }
            .pickerStyle(.segmented)
            .labelsHidden()
            .padding(12)

            if offersTeardown, loupeIsInstalled {
                Button("Turn Loupe off") {
                    Loupe.stop()
                    loupeIsInstalled = false
                }
                .padding(.bottom, 12)
            }

...
